Alteração Design Responsivo

--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
 
 
     </div-right>
+    
+
+
+
+</body>
+
+</html>
+
+
+
+
+    </div-right>
     <img src="logo.png" alt="logo-Easy-Shopping">
 
 
